# sagemaker_mlflow_optuna

./: .pre-commit-config.yaml  Makefile  README.md  __init__.py  fm_optuna_vis.ipynb  fm_train.ipynb  local_docker_cli.sh  logging.yaml  mkdocs.yml  nb_job_init.sh  notebook_pipeline.ipynb  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  test.yml
data/: __init__.py  simulate_gambling_data.py
docs/: index.md
docs/api/: steps.md  utilities.md
docs/architecture/: design.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: optuna.md  pipeline-overview.md  running-pipelines.md
docs/operations/: runbook.md  troubleshooting.md
infrastructure/: README.md  cloudformation.yaml  deploy.sh  lifecycle-config.sh  sagemaker-domain.yaml
notebooks/: fm_pipeline.ipynb  fm_train.ipynb
pipelines/: __init__.py  fm_optuna_train.py  sagemaker_nb_pipeline.py
results/: optuna.db  optuna_laptops.db  study_trials.parquet
scripts/: __init__.py  aggregate_optuna_studies.py  fm_encoding.py  fm_sagemaker.py  generate_apple_sales_data.py  generate_electronics_sales_data.py  local_docker_cli.sh  simulate_gambling_data.py
scripts/utils/: __init__.py  aggregate_optuna_studies.py  config.py
steps/: __init__.py
steps/evaluate/: __init__.py  metrics.py
steps/predict/: __init__.py
steps/preprocess/: __init__.py  fm_encoding.py
steps/train/: __init__.py  factorization_machines.py
tests/: __init__.py
tests/unit/: test_fm_encoding.py  (+1 more)
utils/: __init__.py  feature_store.py  generic.py  io.py  lineage.py  mlflow_helpers.py  optuna_helpers.py
