[project]
name = "sagemaker-mlflow-optuna"
version = "0.1.0"
description = "SageMaker MLflow Optuna pipeline for FM hyperparameter optimization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core ML
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    # MLOps
    "mlflow>=2.10.0",
    "optuna>=3.5.0",
    "sagemaker>=2.200.0",
    # Utilities
    "matplotlib>=3.7.0",
    "dask>=2024.1.0",
    "boto3>=1.28.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    # Linting & Formatting
    "ruff>=0.8.0",
    "black>=24.0.0",
    "pre-commit>=3.0.0",
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "N803",  # Argument name should be lowercase (X_train is standard in ML)
    "N806",  # Variable in function should be lowercase (X, X_train, etc.)
]

[tool.ruff.lint.isort]
known-first-party = ["pipelines", "steps", "utils", "data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
omit = ["tests/*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
